--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,22 @@
 .Navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 64px;
-  background-color: beige;
+  background-color: #e3e8a1;
   display: flex;
   justify-content: space-around;
+  align-items: center;
+}
+
+.Navbar a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+a.Active {
+  text-decoration: underline;
 }
