--- a/src/pages/Dishes/Dishes.module.css
+++ b/src/pages/Dishes/Dishes.module.css
@@ -1,3 +1,94 @@
-.Dishes{
-  
+.Dishes {
+  margin-top: calc(var(--NavbarHeight) + 32px);
+  text-align: center;
+}
+
+.AddDishButton {
+  position: fixed;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 32px;
+  font-size: 48px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.DishList {
+  margin: 16px auto;
+  width: 60vw;
+  padding: 32px;
+  border-top: 1px solid black;
+}
+
+.DishItem {
+  width: 80%;
+  margin: 16px auto;
+  padding: 16px;
+  border: 1px solid grey;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.Image {
+  height: 64px;
+  width: 80px;
+  position: relative;
+  z-index: var(--PhotoIndex);
+}
+
+.Image:hover .EditImageButton {
+  display: flex;
+}
+
+.EditImageButton {
+  display: none;
+  position: absolute;
+
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.Image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.ButtonGroup {
+  display: flex;
+  flex-direction: column;
+}
+
+.ButtonGroup button {
+  margin: 4px 0;
+  cursor: pointer;
+  border: none;
+  padding: 8px;
+  border-radius: 4px;
+}
+
+.EditBtn {
+  background-color: rgb(128, 128, 4);
+  color: white;
+}
+
+.DeleteBtn {
+  background-color: rgb(152, 28, 28);
+  color: white;
 }
