--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -21,3 +21,18 @@
 a.Active {
   text-decoration: underline;
 }
+
+.Navbar button {
+  height: 50%;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  width: 10%;
+  background-color: rgb(183, 76, 76);
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+  font-weight: bold;
+}
